[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visor-python"
version = "0.1.0"
description = "Python SDK for the Visor Public API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://visor.vin"
Repository = "https://github.com/drewpearce/visor-python"

[tool.hatch.build.targets.wheel]
packages = ["src/visor"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
