[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "visor-python"
version = "0.1.0"
description = "Python SDK for the Visor Public API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Andrew Miller", email = "miller.andrew.preston@gmail.com" },
]
keywords = ["visor", "automotive", "car", "vehicle", "listings", "inventory", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.0",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://visor.vin"
Repository = "https://github.com/whitewalls86/visor-python"
Issues = "https://github.com/whitewalls86/visor-python/issues"
Changelog = "https://github.com/whitewalls86/visor-python/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/visor"]

[tool.hatch.build.targets.sdist]
exclude = [
    "Visor API Docs/",
    "Design Docs/",
    ".coverage",
    ".pytest_cache/",
    "dist/",
    "*.egg-info/",
    "__pycache__/",
    "tests/",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live API tests, requires VISOR_API_KEY",
    "release_gate: stable live tests required before publishing",
    "manual: live tests that require special account state or credentials",
]
